--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "8985d94e-8812-4515-8746-6df911940e41"
 authors = ["Fran Bartolić"]
 version = "0.1.0"
 
+[deps]
+Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+FromFile = "ff7dd447-1dcb-4ce3-b8ac-22a812192de7"
+
 [compat]
 julia = "1"
 
