--- a/Project.toml
+++ b/Project.toml
@@ -8,6 +8,7 @@ Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 FromFile = "ff7dd447-1dcb-4ce3-b8ac-22a812192de7"
 
 [compat]
+FromFile = "0.1"
 julia = "1"
 
 [extras]
